--- a/Control2/Control2/MainWindow.xaml
+++ b/Control2/Control2/MainWindow.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="100"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-        <Button x:Name="button1" Grid.Row="0" Grid.Column="0" Click="Button_Click" Content="{Binding Path=viewModel.Name}"></Button>
+        <Button Grid.Row="0" Grid.Column="0" Click="Button_Click" Content="{Binding Path=Field[0][0]}"></Button>
         <Button Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[0][1]}"/>
         <Button Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[0][2]}"/>
         <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[1][0]}"/>
