--- a/Control2/Control2/MainWindow.xaml
+++ b/Control2/Control2/MainWindow.xaml
@@ -25,6 +25,6 @@
         <Button Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[1][2]}"/>
         <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[2][0]}"/>
         <Button Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Click="Button_Click" Content="{Binding Path=Field[2][1]}"/>
-        <Button Grid.Row="2" Grid.Column="2" Click="Button_Click" Content="{Binding Path=Field[2][2]}" Margin="0.333,0.333,10,10"/>
+        <Button Grid.Row="2" Grid.Column="2" Click="Button_Click" Content="{Binding Path=Field[2][2]}"/>
     </Grid>
 </Window>
