--- a/GUIForFTP/GUIForFTP/MainWindow.xaml
+++ b/GUIForFTP/GUIForFTP/MainWindow.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="7*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="2*"/>
@@ -36,10 +36,10 @@
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0">
-                        <TextBox x:Name="AddressBox" Text="127.0.0.1" TextAlignment="Left"/>
+                        <TextBox x:Name="AddressBox" Text="Введите адрес (127.0.0.1)" TextAlignment="Left"/>
                     </Grid>
                     <Grid Grid.Row="1">
-                        <TextBox x:Name="PortBox" Text="8238"></TextBox>
+                        <TextBox x:Name="PortBox" Text="Введите порт (8238)"></TextBox>
                     </Grid>
                 </Grid>
 
@@ -57,11 +57,12 @@
                 </Grid.ColumnDefinitions>
             </Grid>
 
-            <ListView x:Name="FileList" ItemsSource="{Binding Files}" MouseDoubleClick="FilesMouseDoubleClick" Margin="5,5,5,5" Grid.Column="1" Grid.Row="0">
+            <ListView x:Name="FileList" ItemsSource="{Binding Files}" MouseDoubleClick="FilesMouseDoubleClick"
+                      Margin="5,5,5,5" Grid.Column="1" Grid.Row="0">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Название"  DisplayMemberBinding="{Binding Name}"/>
-                        <GridViewColumn Header="Тип"  DisplayMemberBinding="{Binding TypeName}"/>
+                        <GridViewColumn Header="Название" Width="150" DisplayMemberBinding="{Binding Name}"/>
+                        <GridViewColumn Header="Тип"  Width="150" DisplayMemberBinding="{Binding TypeName}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
@@ -70,25 +71,28 @@
 
 
         <Grid Grid.Row="0">
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" Margin="10,0,9.667,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Content="Скачать файл" Grid.Column="0"></Button>
-                <Button Name="DownloadAllButton" Content="Скачать все файлы" Grid.Column="1" Click="DownloadAllButton_Click"></Button>
+                <TextBlock VerticalAlignment="Bottom" FontSize="16" Grid.ColumnSpan="2" Margin="0,0,253.667,0">Список файлов:</TextBlock>
+                <Button Name="DownloadAllButton" Content="Скачать все файлы" Click="DownloadAllButton_Click" Grid.ColumnSpan="2" Margin="259,0,-0.333,0"/>
             </Grid>
         </Grid>
 
-        <TextBox x:Name="downloadTextBox" Text="D:\Temp\" Grid.Row="2" Grid.Column="1"></TextBox>
+        <TextBox x:Name="downloadTextBox" Text="Введите директорию (D:\Temp\)" Grid.Row="2" Grid.Column="1"></TextBox>
+
+        <TextBlock  Grid.Row="0"  Grid.Column="1" VerticalAlignment="Bottom" FontSize="16" Margin="5.333,0,0.333,0">
+            Список скачанных файлов</TextBlock>
 
         <ListView x:Name="DownloadList" ItemsSource="{Binding FilesToDownload}" Margin="5,5,5,5" 
-                  Grid.Column="1" Grid.Row="1">
+                Grid.Row="1"  Grid.Column="1" SelectionChanged="DownloadList_SelectionChanged">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Название"  DisplayMemberBinding="{Binding FileName}"/>
-                    <GridViewColumn Header="Статус"  DisplayMemberBinding="{Binding Status, Converter={StaticResource DefaultEnumToStringConverter}}"/>
+                    <GridViewColumn Header="Название" Width="100" DisplayMemberBinding="{Binding FileName}"/>
+                    <GridViewColumn Header="Статус" Width="150" DisplayMemberBinding="{Binding Status, Converter={StaticResource DefaultEnumToStringConverter}}"/>
                 </GridView>
             </ListView.View>
         </ListView>
